--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
