--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-bootstrap": "^0.30.8",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0"
   },
   "proxy": "http://localhost:3001/",
   "scripts": {
