--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev" : "nf start -p 3000 --procfile Procfile.dev",
+    "dev": "nf start -p 3000 --procfile Procfile.dev",
     "server": "node app.js",
     "mon": "nodemon ./bin/www"
   },
@@ -14,7 +14,11 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.9.1",
     "morgan": "~1.7.0",
+    "react-router": "^4.0.0",
+    "react-scripts": "^0.9.5",
     "serve-favicon": "~2.3.0"
   }
 }
