--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "NODE_ENV=production nf start -p $PORT",
     "dev": "nf start -p 3000 --procfile Procfile.dev",
-    "server": "node app.js",
+    "server": "node ./bin/www",
     "mon": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^4.9.1",
     "morgan": "~1.7.0",
     "react-router": "^4.0.0",
